Tests/CompilerTests/negative/no-given-1.hylo
//! no-std

trait P {}
trait Q {}

struct A {}
struct B {}

fun f<where A is Q>() {}

fun g() {
  given B is P {}
  given <where A is P> A is Q {}
  f()
}

fun h() {
  given <T where T is P> T is Q {}
  f()
}

fun i<T where T is P>(x: T) {
  i(x: ())
}
